# agent-practice

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  pages.yml
apps/web/: astro.config.mjs
challenges/: catalog.yaml  details.yaml
challenges/001-echo-agent/: README.md  challenge.yaml  grader.py
challenges/002-json-only/: README.md  challenge.yaml  grader.py
challenges/003-tool-picker/: README.md  challenge.yaml  grader.py
challenges/004-calculator-agent/: README.md  challenge.yaml  grader.py
challenges/005-ticket-triage/: README.md  challenge.yaml  grader.py
challenges/006-mini-rag/: README.md  challenge.yaml  grader.py
challenges/008-tool-error-recovery/: README.md  challenge.yaml  grader.py
challenges/010-two-step-researcher/: README.md  challenge.yaml  grader.py
challenges/013-injection-guard-i/: README.md  challenge.yaml  grader.py
challenges/017-eval-harness-basics/: README.md  challenge.yaml  grader.py
docs/: architecture.md  challenge-authoring.md  grading-policy.md  roadmap.md
runner/agent_practice_runner/: __init__.py  cli.py  context.py  execution.py  grading.py  loader.py  reports.py  schemas.py  transcript.py
schemas/: challenge.schema.json  result.schema.json  submission.schema.json  transcript.schema.json
templates/langchain/: README.md  submission.yaml
templates/langgraph/: README.md  submission.yaml
templates/raw-python/: README.md  submission.yaml
tests/challenges/: test_challenge_catalog.py  test_challenge_details.py
(+62 files in other folders)
