[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-practice"
version = "0.1.0"
description = "Open-source agent engineering practice platform with local grading."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "pydantic",
  "typer",
  "jsonschema",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
test = [
  "pytest",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.setuptools.packages.find]
where = [
  "runner",
]
include = [
  "agent_practice_runner*",
]
